cmake_minimum_required(VERSION 3.10)
project(arm_bldc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
add_definitions(-DTARGET_NUCLEO_F303FE)
add_definitions(-DDEVICE_SERIAL)
add_definitions(-DDEVICE_SERIAL_ASYNCH)
add_definitions(-DDEVICE_SERIAL_FC)

include_directories(bldc)
include_directories(MODSERIAL)
include_directories(comms)
include_directories(mbed-os)
include_directories(mbed-os/cmsis/TARGET_CORTEX_A)
include_directories(mbed-os/cmsis/TARGET_CORTEX_M)
include_directories(mbed-os/drivers)
include_directories(mbed-os/events)
include_directories(mbed-os/events/equeue)
include_directories(mbed-os/hal)
include_directories(mbed-os/hal/storage_abstraction)
include_directories(mbed-os/hal/TARGET_FLASH_CMSIS_ALGO)
include_directories(mbed-os/platform)
include_directories(mbed-os/rtos)
include_directories(mbed-os/rtos/TARGET_CORTEX)
include_directories(mbed-os/rtos/TARGET_CORTEX/rtx4)
include_directories(mbed-os/rtos/TARGET_CORTEX/rtx5/Include)
include_directories(mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Config)
include_directories(mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Include)
include_directories(mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source)
include_directories(mbed-os/rtos/TARGET_CORTEX/TARGET_CORTEX_M)
include_directories(mbed-os/targets/TARGET_STM)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/device)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/TARGET_NUCLEO_F302R8)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/TARGET_NUCLEO_F303K8)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/TARGET_DISCO_F303VC)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303RE)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303ZE)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_DISCO_F334C8)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_NUCLEO_F334R8)
include_directories(mbed-os/tools/data/rpc)

set(SOURCE_FILES
bldc/bldc.cpp
bldc/bldc.h
comms/comms.cpp
comms/comms.h
mbed-os/cmsis/TARGET_CORTEX_A/cmsis_armcc.h
mbed-os/cmsis/TARGET_CORTEX_A/cmsis_armclang.h
mbed-os/cmsis/TARGET_CORTEX_A/cmsis_compiler.h
mbed-os/cmsis/TARGET_CORTEX_A/cmsis_cp15.h
mbed-os/cmsis/TARGET_CORTEX_A/cmsis_gcc.h
mbed-os/cmsis/TARGET_CORTEX_A/cmsis_iccarm.h
mbed-os/cmsis/TARGET_CORTEX_A/core_ca.h
mbed-os/cmsis/TARGET_CORTEX_A/irq_ctrl.h
mbed-os/cmsis/TARGET_CORTEX_A/irq_ctrl_gic.c
mbed-os/cmsis/TARGET_CORTEX_M/arm_math.h
mbed-os/cmsis/TARGET_CORTEX_M/cmsis_armcc.h
mbed-os/cmsis/TARGET_CORTEX_M/cmsis_armclang.h
mbed-os/cmsis/TARGET_CORTEX_M/cmsis_compiler.h
mbed-os/cmsis/TARGET_CORTEX_M/cmsis_gcc.h
mbed-os/cmsis/TARGET_CORTEX_M/cmsis_iccarm.h
mbed-os/cmsis/TARGET_CORTEX_M/cmsis_version.h
mbed-os/cmsis/TARGET_CORTEX_M/core_armv8mbl.h
mbed-os/cmsis/TARGET_CORTEX_M/core_armv8mml.h
mbed-os/cmsis/TARGET_CORTEX_M/core_cm0.h
mbed-os/cmsis/TARGET_CORTEX_M/core_cm0plus.h
mbed-os/cmsis/TARGET_CORTEX_M/core_cm23.h
mbed-os/cmsis/TARGET_CORTEX_M/core_cm3.h
mbed-os/cmsis/TARGET_CORTEX_M/core_cm33.h
mbed-os/cmsis/TARGET_CORTEX_M/core_cm4.h
mbed-os/cmsis/TARGET_CORTEX_M/core_cm7.h
mbed-os/cmsis/TARGET_CORTEX_M/core_cmSecureAccess.h
mbed-os/cmsis/TARGET_CORTEX_M/core_sc000.h
mbed-os/cmsis/TARGET_CORTEX_M/core_sc300.h
mbed-os/cmsis/TARGET_CORTEX_M/mpu_armv7.h
mbed-os/cmsis/TARGET_CORTEX_M/mpu_armv8.h
mbed-os/cmsis/TARGET_CORTEX_M/tz_context.h
mbed-os/drivers/AnalogIn.cpp
mbed-os/drivers/AnalogIn.h
mbed-os/drivers/AnalogOut.h
mbed-os/drivers/BusIn.cpp
mbed-os/drivers/BusIn.h
mbed-os/drivers/BusInOut.cpp
mbed-os/drivers/BusInOut.h
mbed-os/drivers/BusOut.cpp
mbed-os/drivers/BusOut.h
mbed-os/drivers/CAN.cpp
mbed-os/drivers/CAN.h
mbed-os/drivers/DigitalIn.h
mbed-os/drivers/DigitalInOut.h
mbed-os/drivers/DigitalOut.h
mbed-os/drivers/Ethernet.cpp
mbed-os/drivers/Ethernet.h
mbed-os/drivers/FlashIAP.cpp
mbed-os/drivers/FlashIAP.h
mbed-os/drivers/I2C.cpp
mbed-os/drivers/I2C.h
mbed-os/drivers/I2CSlave.cpp
mbed-os/drivers/I2CSlave.h
mbed-os/drivers/InterruptIn.cpp
mbed-os/drivers/InterruptIn.h
mbed-os/drivers/InterruptManager.cpp
mbed-os/drivers/InterruptManager.h
mbed-os/drivers/LowPowerTicker.h
mbed-os/drivers/LowPowerTimeout.h
mbed-os/drivers/LowPowerTimer.h
mbed-os/drivers/MbedCRC.cpp
mbed-os/drivers/MbedCRC.h
mbed-os/drivers/PortIn.h
mbed-os/drivers/PortInOut.h
mbed-os/drivers/PortOut.h
mbed-os/drivers/PwmOut.h
mbed-os/drivers/RawSerial.cpp
mbed-os/drivers/RawSerial.h
mbed-os/drivers/Serial.cpp
mbed-os/drivers/Serial.h
mbed-os/drivers/SerialBase.cpp
mbed-os/drivers/SerialBase.h
mbed-os/drivers/SerialWireOutput.h
mbed-os/drivers/SPI.cpp
mbed-os/drivers/SPI.h
mbed-os/drivers/SPISlave.cpp
mbed-os/drivers/SPISlave.h
mbed-os/drivers/TableCRC.cpp
mbed-os/drivers/TableCRC.h
mbed-os/drivers/Ticker.cpp
mbed-os/drivers/Ticker.h
mbed-os/drivers/Timeout.cpp
mbed-os/drivers/Timeout.h
mbed-os/drivers/Timer.cpp
mbed-os/drivers/Timer.h
mbed-os/drivers/TimerEvent.cpp
mbed-os/drivers/TimerEvent.h
mbed-os/drivers/UARTSerial.cpp
mbed-os/drivers/UARTSerial.h
mbed-os/events/equeue/tests/prof.c
mbed-os/events/equeue/tests/tests.c
mbed-os/events/equeue/equeue.c
mbed-os/events/equeue/equeue.h
mbed-os/events/equeue/equeue_mbed.cpp
mbed-os/events/equeue/equeue_platform.h
mbed-os/events/equeue/equeue_posix.c
mbed-os/events/Event.h
mbed-os/events/EventQueue.cpp
mbed-os/events/EventQueue.h
mbed-os/events/mbed_events.h
mbed-os/events/mbed_shared_queues.cpp
mbed-os/events/mbed_shared_queues.h
mbed-os/hal/storage_abstraction/Driver_Common.h
mbed-os/hal/storage_abstraction/Driver_Storage.h
mbed-os/hal/TARGET_FLASH_CMSIS_ALGO/flash_common_algo.c
mbed-os/hal/TARGET_FLASH_CMSIS_ALGO/flash_data.h
mbed-os/hal/analogin_api.h
mbed-os/hal/analogout_api.h
mbed-os/hal/buffer.h
mbed-os/hal/can_api.h
mbed-os/hal/can_helper.h
mbed-os/hal/critical_section_api.h
mbed-os/hal/dma_api.h
mbed-os/hal/ethernet_api.h
mbed-os/hal/flash_api.h
mbed-os/hal/gpio_api.h
mbed-os/hal/gpio_irq_api.h
mbed-os/hal/i2c_api.h
mbed-os/hal/itm_api.h
mbed-os/hal/lp_ticker_api.h
mbed-os/hal/mbed_critical_section_api.c
mbed-os/hal/mbed_flash_api.c
mbed-os/hal/mbed_gpio.c
mbed-os/hal/mbed_itm_api.c
mbed-os/hal/mbed_lp_ticker_api.c
mbed-os/hal/mbed_pinmap_common.c
mbed-os/hal/mbed_sleep_manager.c
mbed-os/hal/mbed_ticker_api.c
mbed-os/hal/mbed_us_ticker_api.c
mbed-os/hal/pinmap.h
mbed-os/hal/port_api.h
mbed-os/hal/pwmout_api.h
mbed-os/hal/rtc_api.h
mbed-os/hal/serial_api.h
mbed-os/hal/sleep_api.h
mbed-os/hal/spi_api.h
mbed-os/hal/ticker_api.h
mbed-os/hal/trng_api.h
mbed-os/hal/us_ticker_api.h
mbed-os/platform/ATCmdParser.cpp
mbed-os/platform/ATCmdParser.h
mbed-os/platform/Callback.h
mbed-os/platform/CallChain.cpp
mbed-os/platform/CallChain.h
mbed-os/platform/CircularBuffer.h
mbed-os/platform/critical.h
mbed-os/platform/CriticalSectionLock.h
mbed-os/platform/CThunk.h
mbed-os/platform/DeepSleepLock.h
mbed-os/platform/DirHandle.h
mbed-os/platform/FileBase.cpp
mbed-os/platform/FileBase.h
mbed-os/platform/FileHandle.cpp
mbed-os/platform/FileHandle.h
mbed-os/platform/FileLike.h
mbed-os/platform/FilePath.cpp
mbed-os/platform/FilePath.h
mbed-os/platform/FileSystemHandle.cpp
mbed-os/platform/FileSystemHandle.h
mbed-os/platform/FileSystemLike.h
mbed-os/platform/FunctionPointer.h
mbed-os/platform/LocalFileSystem.cpp
mbed-os/platform/LocalFileSystem.h
mbed-os/platform/mbed_alloc_wrappers.cpp
mbed-os/platform/mbed_application.c
mbed-os/platform/mbed_application.h
mbed-os/platform/mbed_assert.c
mbed-os/platform/mbed_assert.h
mbed-os/platform/mbed_board.c
mbed-os/platform/mbed_critical.c
mbed-os/platform/mbed_critical.h
mbed-os/platform/mbed_debug.h
mbed-os/platform/mbed_error.c
mbed-os/platform/mbed_error.h
mbed-os/platform/mbed_interface.c
mbed-os/platform/mbed_interface.h
mbed-os/platform/mbed_mem_trace.cpp
mbed-os/platform/mbed_mem_trace.h
mbed-os/platform/mbed_mktime.c
mbed-os/platform/mbed_mktime.h
mbed-os/platform/mbed_poll.cpp
mbed-os/platform/mbed_poll.h
mbed-os/platform/mbed_power_mgmt.h
mbed-os/platform/mbed_preprocessor.h
mbed-os/platform/mbed_retarget.cpp
mbed-os/platform/mbed_retarget.h
mbed-os/platform/mbed_rtc_time.cpp
mbed-os/platform/mbed_rtc_time.h
mbed-os/platform/mbed_sdk_boot.c
mbed-os/platform/mbed_semihost_api.c
mbed-os/platform/mbed_semihost_api.h
mbed-os/platform/mbed_sleep.h
mbed-os/platform/mbed_stats.c
mbed-os/platform/mbed_stats.h
mbed-os/platform/mbed_toolchain.h
mbed-os/platform/mbed_wait_api.h
mbed-os/platform/mbed_wait_api_no_rtos.c
mbed-os/platform/mbed_wait_api_rtos.cpp
mbed-os/platform/NonCopyable.h
mbed-os/platform/platform.h
mbed-os/platform/PlatformMutex.h
mbed-os/platform/rtc_time.h
mbed-os/platform/ScopedLock.h
mbed-os/platform/semihost_api.h
mbed-os/platform/SingletonPtr.h
mbed-os/platform/sleep.h
mbed-os/platform/Stream.cpp
mbed-os/platform/Stream.h
mbed-os/platform/toolchain.h
mbed-os/platform/Transaction.h
mbed-os/platform/wait_api.h
mbed-os/rtos/TARGET_CORTEX/rtx4/cmsis_os.h
mbed-os/rtos/TARGET_CORTEX/rtx4/cmsis_os1.c
mbed-os/rtos/TARGET_CORTEX/rtx5/Include/cmsis_os2.h
mbed-os/rtos/TARGET_CORTEX/rtx5/Include/os_tick.h
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Config/TARGET_CORTEX_A/handlers.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Config/RTX_Config.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Config/RTX_Config.h
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Include/rtx_evr.h
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Include/rtx_os.h
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rt_OsEventObserver.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rt_OsEventObserver.h
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_core_c.h
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_core_ca.h
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_core_cm.h
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_delay.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_evflags.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_evr.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_kernel.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_lib.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_lib.h
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_memory.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_mempool.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_msgqueue.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_mutex.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_semaphore.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_system.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_thread.c
mbed-os/rtos/TARGET_CORTEX/rtx5/RTX/Source/rtx_timer.c
mbed-os/rtos/TARGET_CORTEX/rtx5/Source/os_systick.c
mbed-os/rtos/TARGET_CORTEX/rtx5/Source/os_tick_ptim.c
mbed-os/rtos/TARGET_CORTEX/TARGET_CORTEX_M/mbed_rtx_fault_handler.c
mbed-os/rtos/TARGET_CORTEX/TARGET_CORTEX_M/mbed_rtx_fault_handler.h
mbed-os/rtos/TARGET_CORTEX/mbed_boot.c
mbed-os/rtos/TARGET_CORTEX/mbed_rtos1_types.h
mbed-os/rtos/TARGET_CORTEX/mbed_rtos_storage.h
mbed-os/rtos/TARGET_CORTEX/mbed_rtx_conf.h
mbed-os/rtos/TARGET_CORTEX/mbed_rtx_handlers.c
mbed-os/rtos/TARGET_CORTEX/mbed_rtx_idle.cpp
mbed-os/rtos/TARGET_CORTEX/SysTimer.cpp
mbed-os/rtos/TARGET_CORTEX/SysTimer.h
mbed-os/rtos/ConditionVariable.cpp
mbed-os/rtos/ConditionVariable.h
mbed-os/rtos/EventFlags.cpp
mbed-os/rtos/EventFlags.h
mbed-os/rtos/Kernel.cpp
mbed-os/rtos/Kernel.h
mbed-os/rtos/Mail.h
mbed-os/rtos/MemoryPool.h
mbed-os/rtos/Mutex.cpp
mbed-os/rtos/Mutex.h
mbed-os/rtos/Queue.h
mbed-os/rtos/rtos.h
mbed-os/rtos/rtos_idle.h
mbed-os/rtos/RtosTimer.cpp
mbed-os/rtos/RtosTimer.h
mbed-os/rtos/Semaphore.cpp
mbed-os/rtos/Semaphore.h
mbed-os/rtos/Thread.cpp
mbed-os/rtos/Thread.h
mbed-os/targets/TARGET_STM/TARGET_STM32F2/analogin_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F2/analogout_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F2/can_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F2/device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F2/flash_api.c
mbed-os/targets/TARGET_STM/TARGET_STM32F2/gpio_irq_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F2/gpio_irq_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F2/i2c_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F2/objects.h
mbed-os/targets/TARGET_STM/TARGET_STM32F2/pin_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F2/pwmout_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F2/pwmout_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F2/serial_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F2/spi_api.c
mbed-os/targets/TARGET_STM/TARGET_STM32F2/spi_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/Release_Notes_stm32f3xx_hal.html
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32_hal_legacy.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_adc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_adc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_adc_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_adc_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_can.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_can.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_cec.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_cec.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_comp.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_comp.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_comp_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_conf.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_cortex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_cortex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_crc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_crc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_crc_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_crc_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_dac.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_dac.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_dac_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_dac_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_def.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_dma.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_dma.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_dma_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_flash.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_flash.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_flash_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_flash_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_gpio.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_gpio.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_gpio_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_hrtim.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_hrtim.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_i2c.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_i2c.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_i2c_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_i2c_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_i2s.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_i2s.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_i2s_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_i2s_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_irda.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_irda.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_irda_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_iwdg.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_iwdg.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_nand.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_nand.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_nor.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_nor.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_opamp.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_opamp.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_opamp_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_opamp_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pccard.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pccard.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pcd.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pcd.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pcd_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pcd_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pwr.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pwr.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pwr_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_pwr_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_rcc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_rcc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_rcc_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_rcc_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_rtc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_rtc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_rtc_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_rtc_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_sdadc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_sdadc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_smartcard.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_smartcard.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_smartcard_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_smartcard_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_smbus.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_smbus.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_spi.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_spi.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_spi_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_spi_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_sram.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_sram.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_tim.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_tim.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_tim_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_tim_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_tsc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_tsc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_uart.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_uart.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_uart_ex.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_uart_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_usart.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_usart.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_usart_ex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_wwdg.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_hal_wwdg.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_adc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_adc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_bus.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_comp.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_comp.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_cortex.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_crc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_crc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_dac.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_dac.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_dma.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_dma.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_exti.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_exti.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_fmc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_fmc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_gpio.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_gpio.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_hrtim.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_hrtim.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_i2c.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_i2c.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_iwdg.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_opamp.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_opamp.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_pwr.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_pwr.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_rcc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_rcc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_rtc.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_rtc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_spi.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_spi.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_system.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_tim.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_tim.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_usart.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_usart.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_utils.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_utils.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/stm32f3xx_ll_wwdg.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device/system_stm32f3xx.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/TOOLCHAIN_ARM_MICRO/startup_stm32f302x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/TOOLCHAIN_ARM_MICRO/stm32f302x8.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/TOOLCHAIN_ARM_STD/startup_stm32f302x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/TOOLCHAIN_ARM_STD/stm32f302x8.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/TOOLCHAIN_GCC_ARM/startup_stm32f302x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/TOOLCHAIN_GCC_ARM/STM32F302X8.ld
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/TOOLCHAIN_IAR/startup_stm32f302x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/TOOLCHAIN_IAR/stm32f302x8.icf
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/cmsis.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/cmsis_nvic.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/hal_tick.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/stm32f302x8.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/device/system_stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/TARGET_NUCLEO_F302R8/PeripheralNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/TARGET_NUCLEO_F302R8/PeripheralPins.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/TARGET_NUCLEO_F302R8/PinNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/TARGET_NUCLEO_F302R8/system_clock.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F302x8/objects.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/TOOLCHAIN_ARM_MICRO/startup_stm32f303x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/TOOLCHAIN_ARM_MICRO/stm32f303x8.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/TOOLCHAIN_ARM_STD/startup_stm32f303x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/TOOLCHAIN_ARM_STD/stm32f303x8.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/TOOLCHAIN_GCC_ARM/startup_stm32f303x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/TOOLCHAIN_GCC_ARM/STM32F303X8.ld
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/TOOLCHAIN_IAR/startup_stm32f303x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/TOOLCHAIN_IAR/stm32f303x8.icf
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/cmsis.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/cmsis_nvic.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/hal_tick.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/stm32f303x8.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/device/system_stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/TARGET_NUCLEO_F303K8/PeripheralNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/TARGET_NUCLEO_F303K8/PeripheralPins.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/TARGET_NUCLEO_F303K8/PinNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/TARGET_NUCLEO_F303K8/system_clock.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303x8/objects.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/TOOLCHAIN_ARM_MICRO/startup_stm32f303xc.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/TOOLCHAIN_ARM_MICRO/stm32f303xc.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/TOOLCHAIN_ARM_STD/startup_stm32f303xc.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/TOOLCHAIN_ARM_STD/stm32f303xc.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/TOOLCHAIN_GCC_ARM/startup_stm32f303xc.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/TOOLCHAIN_GCC_ARM/STM32F303XC.ld
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/TOOLCHAIN_IAR/startup_stm32f303xc.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/TOOLCHAIN_IAR/stm32f303xc.icf
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/cmsis.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/cmsis_nvic.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/hal_tick.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/stm32f303xc.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/device/system_stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/TARGET_DISCO_F303VC/PeripheralNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/TARGET_DISCO_F303VC/PeripheralPins.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/TARGET_DISCO_F303VC/PinNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/TARGET_DISCO_F303VC/system_clock.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xC/objects.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/TOOLCHAIN_ARM_MICRO/startup_stm32f303xe.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/TOOLCHAIN_ARM_MICRO/stm32f303xe.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/TOOLCHAIN_ARM_STD/startup_stm32f303xe.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/TOOLCHAIN_ARM_STD/stm32f303xe.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/TOOLCHAIN_GCC_ARM/startup_stm32f303xe.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/TOOLCHAIN_GCC_ARM/STM32F303XE.ld
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/TOOLCHAIN_IAR/startup_stm32f303xe.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/TOOLCHAIN_IAR/stm32f303xe.icf
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/cmsis.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/cmsis_nvic.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/hal_tick.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/stm32f303xe.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/device/system_stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303RE/PeripheralNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303RE/PeripheralPins.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303RE/PinNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303RE/system_clock.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303ZE/PeripheralNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303ZE/PeripheralPins.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303ZE/PinNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/TARGET_NUCLEO_F303ZE/system_clock.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F303xE/objects.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/TOOLCHAIN_ARM_MICRO/startup_stm32f334x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/TOOLCHAIN_ARM_MICRO/stm32f334x8.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/TOOLCHAIN_ARM_STD/startup_stm32f334x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/TOOLCHAIN_ARM_STD/stm32f334x8.sct
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/TOOLCHAIN_GCC_ARM/startup_stm32f334x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/TOOLCHAIN_GCC_ARM/STM32F334X8.ld
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/TOOLCHAIN_IAR/startup_stm32f334x8.S
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/TOOLCHAIN_IAR/stm32f334x8.icf
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/cmsis.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/cmsis_nvic.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/hal_tick.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/stm32f334x8.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/device/system_stm32f3xx.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_DISCO_F334C8/PeripheralNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_DISCO_F334C8/PeripheralPins.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_DISCO_F334C8/PinNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_DISCO_F334C8/system_clock.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_NUCLEO_F334R8/PeripheralNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_NUCLEO_F334R8/PeripheralPins.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_NUCLEO_F334R8/PinNames.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/TARGET_NUCLEO_F334R8/system_clock.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/TARGET_STM32F334x8/objects.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/analogin_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/analogout_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/can_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/common_objects.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/flash_api.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/gpio_irq_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/gpio_irq_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/i2c_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/pin_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/pwmout_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/pwmout_device.h
mbed-os/targets/TARGET_STM/TARGET_STM32F3/serial_device.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/spi_api.c
mbed-os/targets/TARGET_STM/TARGET_STM32F3/spi_device.h
mbed-os/targets/TARGET_STM/analogin_api.c
mbed-os/targets/TARGET_STM/analogout_api.c
mbed-os/targets/TARGET_STM/can_api.c
mbed-os/targets/TARGET_STM/gpio_api.c
mbed-os/targets/TARGET_STM/gpio_irq_api.c
mbed-os/targets/TARGET_STM/gpio_object.h
mbed-os/targets/TARGET_STM/hal_tick_16b.c
mbed-os/targets/TARGET_STM/hal_tick_32b.c
mbed-os/targets/TARGET_STM/i2c_api.c
mbed-os/targets/TARGET_STM/lp_ticker.c
mbed-os/targets/TARGET_STM/mbed_overrides.c
mbed-os/targets/TARGET_STM/mbed_rtx.h
mbed-os/targets/TARGET_STM/nvic_addr.h
mbed-os/targets/TARGET_STM/PeripheralPins.h
mbed-os/targets/TARGET_STM/pinmap.c
mbed-os/targets/TARGET_STM/PinNamesTypes.h
mbed-os/targets/TARGET_STM/port_api.c
mbed-os/targets/TARGET_STM/PortNames.h
mbed-os/targets/TARGET_STM/pwmout_api.c
mbed-os/targets/TARGET_STM/rtc_api.c
mbed-os/targets/TARGET_STM/rtc_api_hal.h
mbed-os/targets/TARGET_STM/serial_api.c
mbed-os/targets/TARGET_STM/serial_api_hal.h
mbed-os/targets/TARGET_STM/sleep.c
mbed-os/targets/TARGET_STM/stm32_assert.h
mbed-os/targets/TARGET_STM/stm_spi_api.c
mbed-os/targets/TARGET_STM/trng_api.c
mbed-os/tools/data/rpc/class.cpp
mbed-os/tools/data/rpc/RPCClasses.h
mbed-os/mbed.h
main.cpp bldc/DataTransport.h debug.h)


add_executable(arm-bldc ${SOURCE_FILES})
